Add punition and reclamation sidebar navigation placeholders